# ProjectC

./: CMakeLists.txt  README.md  calc.cpp  main.cpp
includes/general/: Utils.h
includes/math/: Calc.cpp  Calc.h
